--- a/1c.html
+++ b/1c.html
@@ -3,19 +3,17 @@
     <head>
         <link rel="stylesheet" href="css/1b.css" type="text/css" />
         <meta charset="utf-8"/>
-        <title>Uppgift 1b</title>
+        <title>Uppgift 1c</title>
     </head>
     <body>
         <div id="wrapper">
-            <h1>Program RaknaSiffror</h1>
+            <h1>Program NastStorsta</h1>
             <form>
                 <input id="inputBox" type="text" name="" value="Mata in ditt heltal"/>
             </form>
                 <a id="doCalc">Kalkylera Nu!</a>
-                <p>Förekomst av
-                    <span class="block">Nollor <span id="zero" class="leftPad"></span></span>
-                    <span class="block">Udda <span id="odd" class="leftPad"></span></span>
-                    <span class="block">Jämna <span id="even" class="leftPad"></span></span>
+                <p>
+                    <span class="block">Näst Största talet är:<span id="secondNr" class="leftPad"></span></span>
                 </p>
         </div>
         <script type="text/javascript" src="js/1b_Calculator.js"></script>
