--- a/1a.html
+++ b/1a.html
@@ -11,7 +11,7 @@
             <form>
                 <input id="inputBox" type="text" name="" value="Skriv in tesxtsträng att beräkna!"/>
             </form>
-                <a id="doCalc">Kallkylera Nu!</a>
+                <a id="doCalc">Kalkylera Nu!</a>
                 <p>Förekomst av antal
                     <span class="block">Antal a:<span id="a" class="leftPad"></span></span>
                     <span class="block">Antal A:<span id="A" class="leftPad"></span></span>
