--- a/1c.html
+++ b/1c.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="css/1b.css" type="text/css" />
+        <link rel="stylesheet" href="css/labb1.css" type="text/css" />
         <meta charset="utf-8"/>
         <title>Uppgift 1c</title>
     </head>
@@ -16,7 +16,7 @@
                     <span class="block">Näst Största talet är:<span id="secondNr" class="leftPad"></span></span>
                 </p>
         </div>
-        <script type="text/javascript" src="js/1b_Calculator.js"></script>
-        <script type="text/javascript" src="js/1b_run.js"></script>
+        <script type="text/javascript" src="js/1c_Calculator.js"></script>
+        <script type="text/javascript" src="js/1c_run.js"></script>
     </body>
 </html> 
