--- a/1b.html
+++ b/1b.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="css/1b.css" type="text/css" />
+        <link rel="stylesheet" href="css/labb1.css" type="text/css" />
         <meta charset="utf-8"/>
         <title>Uppgift 1b</title>
     </head>
